# helgemathee-alembic-softimage

./: .hgignore  CMakeLists.txt  CMakeLists_ilmbase.txt  WindowsBuildSteps.html  build_Albemic.cmd  build_Alembic.cmd  build_boost.cmd  build_hdf.cmd  build_ilmbase.cmd  build_single_test.cmd  build_softimage.cmd  build_zlib.cmd  convert_ilmbase_vcprojs.py  download_thirdparty_libs.cmd  init_Alembic.cmd  init_all.cmd  prefetch_thirdparty_libs.py
examples/AbcClients/WFObjConvert/Tests/: CMakeLists.txt
examples/maya/AlembicSimpleAbcExport/: CMakeLists.txt
lib/Alembic/: CMakeLists.txt
lib/Alembic/Abc/: Foundation.h  TypedArraySample.h
lib/Alembic/Abc/Tests/: CMakeLists.txt  ParentingTest.cpp  test1.cpp
lib/Alembic/AbcCoreAbstract/: ArraySample.cpp  Foundation.h
lib/Alembic/AbcCoreAbstract/Tests/: CMakeLists.txt  TestTimeSampling.cpp
lib/Alembic/AbcCoreHDF5/: ArImpl.cpp  ArImpl.h  AwImpl.cpp  AwImpl.h  ReadUtil.h  WriteUtil.h
lib/Alembic/AbcCoreHDF5/Tests/: ArrayPropertyTests.cpp  CMakeLists.txt
lib/Alembic/AbcGeom/: IXform.h  OSubD.h  OXform.h  SchemaInfoDeclarations.h
lib/Alembic/AbcGeom/Tests/: CMakeLists.txt  PolyMeshTest.cpp  SubDTest.cpp
lib/Alembic/Util/: Digest.h  Murmur3.cpp
maya/: CMakeLists.txt
maya/AbcExport/: AbcExport.cpp  AbcWriteJob.cpp  CMakeLists.txt  Foundation.h
maya/AbcImport/: CMakeLists.txt  main.cpp  util.cpp  util.h
prman/Procedural/: WriteGeo.cpp
python/alembic/: CMakeLists.txt
softimage/: AlembicArchiveStorage.cpp  AlembicArchiveStorage.h  AlembicCamera.cpp  AlembicCamera.h  AlembicObject.cpp  AlembicObject.h  AlembicPolyMsh.cpp  AlembicPolyMsh.h  AlembicWriteJob.cpp  AlembicWriteJob.h  AlembicXform.cpp  AlembicXform.h  CMakeLists.txt  Foundation.h  alembic.cpp
softimage/alembic/Application/Plugins/: Foundation.h  GNUmakefile  alembic.cpp  alembic.sln  alembic.vcproj  alembic_dependencies.vsprops  alembic_dependencies_debug.vsprops
